Opened 15 years ago
Closed 15 years ago
#842 closed defect (fixed)
ljpeg decodes incorrectly
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | unspecified | Keywords: | mjpeg ljpeg |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
ftp://65.66.246.92/pub/GraphicsMagick/delegates/ljpeg-6b.tar.gz
C:\>ffmpeg -i testimgl.jpg out.bmp
ffmpeg version N-36193-gf514695, Copyright (c) 2000-2011 the FFmpeg developers
built on Dec 26 2011 17:50:37 with gcc 4.6.2
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
libavutil 51. 33.100 / 51. 33.100
libavcodec 53. 48.100 / 53. 48.100
libavformat 53. 28.100 / 53. 28.100
libavdevice 53. 4.100 / 53. 4.100
libavfilter 2. 54.100 / 2. 54.100
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 5.100 / 0. 5.100
libpostproc 51. 2.100 / 51. 2.100
Input #0, image2, from 'testimgl.jpg':
Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
Stream #0:0: Video: mjpeg, bgr24, 227x149, 25 tbr, 25 tbn, 25 tbc
[buffer @ 020F1820] w:227 h:149 pixfmt:bgr24 tb:1/1000000 sar:0/1 sws_param:
Output #0, image2, to 'out.bmp':
Metadata:
encoder : Lavf53.28.100
Stream #0:0: Video: bmp, bgr24, 227x149, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
Stream #0:0 -> #0:0 (mjpeg -> bmp)
Press [q] to stop, [?] for help
frame= 1 fps= 0 q=0.0 Lsize= 0kB time=00:00:00.04 bitrate= 0.0kbits/
s
video:100kB audio:0kB global headers:0kB muxing overhead -100.000000%
Attachments (1)
Change History (4)
by , 15 years ago
| Attachment: | testimgl.jpg added |
|---|
comment:1 by , 15 years ago
comment:2 by , 15 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | mjpeg ljpeg added |
| Summary: | jpeg lossless decodes incorrectly → ljpeg decodes incorrectly |
My suspicion is that the sample does not confirm to the latest specification...
(And remember that there is "jpeg lossless" - "loco" - and "ljpeg", they are not compatible at all.)
comment:3 by , 15 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Color depth: 24bpp
Mode: Lossless
Bits per sample: 8
Samples per pixel: 3
Subsampling: 1:1:1 (11:11:11)
Interleaved: Yes
Color space: RGB
Lossless Predictor: 4
Lossless Point Transform: 1
Compression: Huffman