ljpegdec: fix point transform injection. Fix Ticket842

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit b0143da80656f286b3e2363f3ddb6f81c4a0fbf5)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>